fix z-index with adminlte template

--- a/src/assets/css/notification.css
+++ b/src/assets/css/notification.css
@@ -4,6 +4,7 @@
   --blue: #1876f2;
   --white: #fff;
   --gap: 20px;
+  --gap-right: 40px;
   --notification-icon-width: 80px;
   --notification-image-width: 67px;
   --gray-light: #f1f1f1;
@@ -15,6 +16,7 @@
   padding: 10px;
   width: 380px;
   height: auto;
+  z-index: 1030 !important;
 }
 
 .notification-item {
@@ -40,12 +42,12 @@
 }
 
 .notification-top-right {
-  right: var(--gap);
+  right: var(--gap-right);
   top: var(--gap);
 }
 
 .notification-bottom-right {
-  right: var(--gap);
+  right: var(--gap-right);
   bottom: var(--gap);
 }
 
